--- a/frontend/dguonoff/package.json
+++ b/frontend/dguonoff/package.json
@@ -13,6 +13,7 @@
     "@types/react-speech-recognition": "^3.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
     "typescript": "^4.9.5",
