feat:application.yml 환경변수 설정

--- a/backend/dguonoff/src/main/resources/application.yml
+++ b/backend/dguonoff/src/main/resources/application.yml
@@ -17,6 +17,6 @@ spring:
 server:
   port: ${APP_SERVER_PORT}
 
-#jwt:
-#  secret: ${JWT_SECRET_KEY}
-#  expiration: ${JWT_EXPIRATION_MILLISECOND}
+jwt:
+  secret: ${JWT_SECRET_KEY}
+  expiration: ${JWT_EXPIRATION_MILLISECOND}
