--- a/backend/dguonoff/src/main/resources/application.yml
+++ b/backend/dguonoff/src/main/resources/application.yml
@@ -18,5 +18,6 @@ server:
   port: ${APP_SERVER_PORT}
 
 jwt:
-  secret: ${JWT_SECRET_KEY}
+  base64:
+    secret: ${JWT_SECRET_KEY}
   expiration: ${JWT_EXPIRATION_MILLISECOND}
