fix:적절한 디렉터리로 이동하여 워크플로우 작동하도록 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,15 @@ jobs:
         with:
           distribution: 'corretto'
           java-version: '11'
+      - name : Change workFlow directory
+        run : |
+          cd backend/dguonoff
 
       - name: Grant execute permission for gradlew
-        run: chmod +x backend/dguonoff/gradlew
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: backend/dguonoff/gradlew clean build
+        run: ./gradlew clean build
         env:
           DB_DOMAIN: ${{secrets.DB_DOMAIN}}
           DB_PORT: ${{secrets.DB_PORT}}
