--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,15 +17,15 @@ jobs:
         with:
           distribution: 'corretto'
           java-version: '11'
-      - name : Change workFlow directory
-        run : |
-          cd backend/dguonoff
+#      - name : Change workFlow directory
+#        run : |
+#          cd backend/dguonoff
 
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x backend/dguonoff/gradlew
 
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: backend/dguonoff/gradlew clean build
         env:
           DB_DOMAIN: ${{secrets.DB_DOMAIN}}
           DB_PORT: ${{secrets.DB_PORT}}
