fix:디렉터리 맞게 수정2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,14 @@ jobs:
 #          cd backend/dguonoff
 
       - name: Grant execute permission for gradlew
-        run: chmod +x backend/dguonoff/gradlew
+        run: |
+         cd backend/dguonoff/
+         chmod +x backend/dguonoff/gradlew
 
       - name: Build with Gradle
-        run: backend/dguonoff/gradlew clean build
+        run: |
+         cd backend/dguonoff/
+         ./gradlew clean build
         env:
           DB_DOMAIN: ${{secrets.DB_DOMAIN}}
           DB_PORT: ${{secrets.DB_PORT}}
