fix: ci.yml > cicd.yml

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,3 +43,24 @@ jobs:
 
           APP_SERVER_PORT: ${{secrets.APP_SERVER_PORT}}
           APP_SERVER_ADDRESS: ${{secrets.APP_SERVER_ADDRESS}}
+      #2 현재시간가져오기
+      - name: Get current time
+        uses: josStorer/get-current-time@v2.0.2
+        id: current-time
+        with:
+          format: YYYY-MM-DDTHH-mm-ss
+          utcOffset: "+09:00"
+      # 3 배포용 패키지 경로 저장
+      - name: Set artifact
+        run: |
+          cd backend/dguonoff && echo "artifact=$(ls ./build/libs)" >> $GITHUB_ENV
+      # 4 빈스토크 배포
+      - name: Beanstalk Deploy
+      uses: einaregilsson/beanstalk-deploy@v20
+      with:
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        application_name: springboot-developer
+        environment_name: springboot-developer-env
+        version_label: github-action-${{steps.current-time.outputs.formattedTime}} region: ap-northeast-2
+        deployment_package: backend/dguonoff/build/libs/${{env.artifact}}
