fix: 문법에 맞게 수정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,11 +56,12 @@ jobs:
           cd backend/dguonoff && echo "artifact=$(ls ./build/libs)" >> $GITHUB_ENV
       # 4 빈스토크 배포
       - name: Beanstalk Deploy
-      uses: einaregilsson/beanstalk-deploy@v20
-      with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: springboot-developer
-        environment_name: springboot-developer-env
-        version_label: github-action-${{steps.current-time.outputs.formattedTime}} region: ap-northeast-2
-        deployment_package: backend/dguonoff/build/libs/${{env.artifact}}
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: springboot-developer
+          environment_name: springboot-developer-env
+          version_label: github-action-${{steps.current-time.outputs.formattedTime}}
+          region: ap-northeast-2
+          deployment_package: backend/dguonoff/build/libs/${{env.artifact}}
