--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,6 +5,8 @@ name: CI
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
@@ -27,7 +29,7 @@ jobs:
 
       - name: Build with Gradle
         run: |
-         cd backend/dguonoff && ./gradlew clean build
+         cd backend/dguonoff && ./gradlew clean build -x test
         env:
           DB_DOMAIN: ${{secrets.DB_DOMAIN}}
           DB_PORT: ${{secrets.DB_PORT}}
@@ -43,25 +45,39 @@ jobs:
 
           APP_SERVER_PORT: ${{secrets.APP_SERVER_PORT}}
           APP_SERVER_ADDRESS: ${{secrets.APP_SERVER_ADDRESS}}
-      #2 현재시간가져오기
-      - name: Get current time
-        uses: josStorer/get-current-time@v2.0.2
-        id: current-time
+
+      # (4) AWS인증 (IAM사용자 Access Key, Secret Key활용)
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          format: YYYY-MM-DDTHH-mm-ss
-          utcOffset: "+09:00"
-      # 3 배포용 패키지 경로 저장
-      - name: Set artifact
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ap-northeast-2
+      # (5)빌드 결과물을 S3버킷에 업로드
+      - name: Upload to AWS S3
         run: |
-          cd backend/dguonoff && echo "artifact=$(ls ./build/libs)" >> $GITHUB_ENV
+          aws deploy push \\
+            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \\
+            --ignore-hidden-files \\
+            --s3-location s3://${{secrets.S3_BUCKET_NAME}}/$GITHUB_SHA.zip \\
+            --source .
+      # (6) S3버킷에 있는 파일을 대상으로 CodeDeploy실행
+      - name: Deploy to AWS EC2 from S3
+        run: |
+          aws deploy create-deployment \\
+            --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_NAME }} \\
+            --deployment-config-name CodeDeployDefault.AllAtOnce \\
+            --deployment-group-name ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \\
+            --s3-location bucket=${{secrets.S3_BUCKET_NAME}},key=$GITHUB_SHA.zip,bundleType=zip
+
       # 4 빈스토크 배포
-      - name: Beanstalk Deploy
-        uses: einaregilsson/beanstalk-deploy@v20
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: springboot-developer
-          environment_name: springboot-developer-env
-          version_label: github-action-${{steps.current-time.outputs.formattedTime}}
-          region: ap-northeast-2
-          deployment_package: backend/dguonoff/build/libs/${{env.artifact}}
+#      - name: Beanstalk Deploy
+#        uses: einaregilsson/beanstalk-deploy@v20
+#        with:
+#          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          application_name: dguonoff-backend-prod
+#          environment_name: Dguonoff-backend-prod-env
+#          version_label: github-action-${{steps.current-time.outputs.formattedTime}}
+#          region: ap-northeast-2
+#          deployment_package: backend/dguonoff/build/libs/${{env.artifact}}
