fix: 인자 형식에 맞게 수정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,10 +56,10 @@ jobs:
       # (5)빌드 결과물을 S3버킷에 업로드
       - name: Upload to AWS S3
         run: |
-          aws deploy push
-            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }}
-            --ignore-hidden-files
-            --s3-location s3://${{secrets.S3_BUCKET_NAME}}/$GITHUB_SHA.zip
+          aws deploy push \\
+            --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_NAME }} \\
+            --ignore-hidden-files \\
+            --s3-location s3://${{secrets.S3_BUCKET_NAME}}/$GITHUB_SHA.zip \\
             --source .
       # (6) S3버킷에 있는 파일을 대상으로 CodeDeploy실행
       - name: Deploy to AWS EC2 from S3
