fix: ci-cd env 값 채운 yml으로 바꾸기 수정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [ main ]
 env:
-  RESOURCE_PATH: ./backend/dguonoff/src/main/resources/application.yml
+  RESOURCE_PATH: backend/dguonoff/src/main/resources/application.yml
 
 
 jobs:
