--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,9 +22,7 @@ jobs:
         with:
           distribution: 'corretto'
           java-version: '11'
-#      - name : Change workFlow directory
-#        run : |
-#          cd backend/dguonoff
+
       - name : set yml file
         uses : microsoft/variable-substitution@v1
         with :
@@ -40,8 +38,15 @@ jobs:
           JWT_TOKEN_PREFIX: ${{ secrets.JWT_TOKEN_PREFIX }}
           JWT_TOKEN_HEADER: ${{ secrets.JWT_TOKEN_HEADER }}
 
-          APP_SERVER_PORT: ${{ secrets.APP_SERVER_PORT }}
-          APP_SERVER_ADDRESS: ${{ secrets.APP_SERVER_ADDRESS }}
+          server:
+            port: ${{ secrets.APP_SERVER_PORT }}
+            address: ${{ secrets.APP_SERVER_ADDRESS }}
+          jwt:
+            base64:
+              secret: ${{ secrets.JWT_SECRET_KEY }}
+            prefix: ${{ secrets.JWT_EXPIRATION_MILLISECOND }}
+            header: ${{ secrets.JWT_TOKEN_PREFIX }}
+            expiration: ${{ secrets.JWT_TOKEN_HEADER }}
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew && echo ${{secrets.APP_SERVER_PORT}}
