--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,21 +23,20 @@ jobs:
           distribution: 'corretto'
           java-version: '11'
 
-      - name : set yml file
-        uses : microsoft/variable-substitution@v1
-        with :
-          files: ${{ env.RESOURCE_PATH }}
-        env:
-          spring.datasource.url: jdbc:mysql://${{ secrets.DB_DOMAIN }}:${{ secrets.DB_PORT }}/${{ secrets.DB_NAME }}
-          spring.datasource.username: ${{ secrets.DB_USERNAME }}
-          spring.datasource.password: ${{ secrets.DB_PASSWORD }}
-          spring.datasource.driver-class-name: ${{ secrets.DB_DDL_MODE }}
-          server.port: ${{ secrets.APP_SERVER_PORT }}
-          server.address: ${{ secrets.APP_SERVER_ADDRESS }}
-          jwt.base64.secret: ${{ secrets.JWT_SECRET_KEY }}
-          jwt.prefix: ${{ secrets.JWT_EXPIRATION_MILLISECOND }}
-          jwt.header: ${{ secrets.JWT_TOKEN_PREFIX }}
-          jwt.expiration: ${{ secrets.JWT_TOKEN_HEADER }}
+      - name: Generate Environment Variables File for Production
+        run: |
+          echo "DB_DOMAIN=$DB_DOMAIN" >> .env
+          echo "DB_PORT=$DB_PORT" >> .env
+          echo "DB_USERNAME = ${{ secrets.DB_USERNAME }}" >> .env
+          echo "DB_PASSWORD = ${{ secrets.DB_PASSWORD }}" >> .env
+          echo "DB_DDL_MODE = ${{ secrets.DB_DDL_MODE }}" >> .env
+          echo "APP_SERVER_PORT = ${{ secrets.APP_SERVER_PORT }}" >> .env
+          echo "APP_SERVER_ADDRESS = ${{ secrets.APP_SERVER_ADDRESS }}" >> .env
+          echo "JWT_SECRET_KEY = ${{ secrets.JWT_SECRET_KEY }}" >> .env
+          echo "JWT_EXPIRATION_MILLISECOND = ${{ secrets.JWT_EXPIRATION_MILLISECOND }}" >> .env
+          echo "JWT_TOKEN_PREFIX = ${{ secrets.JWT_TOKEN_PREFIX }}" >> .env
+          echo "JWT_TOKEN_HEADER = ${{ secrets.JWT_TOKEN_HEADER }}" >> .env
+       
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew && echo ${{secrets.APP_SERVER_PORT}}
