--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,15 +28,15 @@ jobs:
           echo "DB_DOMAIN=$DB_DOMAIN" >> .env
           echo "DB_PORT=$DB_PORT" >> .env
           echo "DB_NAME=$DB_NAME" >> .env
-          echo "DB_USERNAME = $DB_USERNAME" >> .env
-          echo "DB_PASSWORD = $DB_PASSWORD" >> .env
-          echo "DB_DDL_MODE = $DB_DDL_MODE" >> .env
-          echo "APP_SERVER_PORT = $APP_SERVER_PORT" >> .env
-          echo "APP_SERVER_ADDRESS = $APP_SERVER_ADDRESS" >> .env
-          echo "JWT_SECRET_KEY = $JWT_SECRET_KEY" >> .env
-          echo "JWT_EXPIRATION_MILLISECOND = $JWT_EXPIRATION_MILLISECOND" >> .env
-          echo "JWT_TOKEN_PREFIX = $JWT_TOKEN_PREFIX" >> .env
-          echo "JWT_TOKEN_HEADER = $JWT_TOKEN_HEADER" >> .env
+          echo "DB_USERNAME=$DB_USERNAME" >> .env
+          echo "DB_PASSWORD=$DB_PASSWORD" >> .env
+          echo "DB_DDL_MODE=$DB_DDL_MODE" >> .env
+          echo "APP_SERVER_PORT=$APP_SERVER_PORT" >> .env
+          echo "APP_SERVER_ADDRESS=$APP_SERVER_ADDRESS" >> .env
+          echo "JWT_SECRET_KEY=$JWT_SECRET_KEY" >> .env
+          echo "JWT_EXPIRATION_MILLISECOND=$JWT_EXPIRATION_MILLISECOND" >> .env
+          echo "JWT_TOKEN_PREFIX=$JWT_TOKEN_PREFIX" >> .env
+          echo "JWT_TOKEN_HEADER=$JWT_TOKEN_HEADER" >> .env
         working-directory: backend/dguonoff
         env:
           DB_DOMAIN: ${{ secrets.DB_DOMAIN }}
@@ -54,7 +54,7 @@ jobs:
 
 
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew && echo ${{secrets.APP_SERVER_PORT}}
+        run: chmod +x gradlew
         working-directory: backend/dguonoff
 
       - name: Build with Gradle
