--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -71,7 +71,7 @@ jobs:
       # (5)빌드 결과물을 S3버킷에 업로드
       - name: Upload to AWS S3
         run: |
-          aws deploy push --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_NAME }} --ignore-hidden-files --s3-location s3://${{secrets.S3_BUCKET_NAME}}/$GITHUB_SHA.zip --source .
+          aws deploy push --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_NAME }} --s3-location s3://${{secrets.S3_BUCKET_NAME}}/$GITHUB_SHA.zip --source .
         working-directory: backend/dguonoff
       # (6) S3버킷에 있는 파일을 대상으로 CodeDeploy실행
       - name: Deploy to AWS EC2 from S3
