--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -71,17 +71,12 @@ jobs:
       # (5)빌드 결과물을 S3버킷에 업로드
       - name: Upload to AWS S3
         run: |
-          aws deploy push \
-          --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_NAME }}\
-          --ignore-hidden-files\
-          --s3-location s3://${{secrets.S3_BUCKET_NAME}}/$GITHUB_SHA.zip --source . .env
+          aws deploy push --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_NAME }} \
+          --ignore-hidden-files --s3-location s3://${{secrets.S3_BUCKET_NAME}}/$GITHUB_SHA.zip --source . .env
         working-directory: backend/dguonoff
       # (6) S3버킷에 있는 파일을 대상으로 CodeDeploy실행
       - name: Deploy to AWS EC2 from S3
         run: |
-          aws deploy create-deployment\
-          --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_NAME }}\
-          --deployment-config-name CodeDeployDefault.AllAtOnce \
-          --deployment-group-name ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
-          --s3-location bucket=${{secrets.S3_BUCKET_NAME}},key=$GITHUB_SHA.zip,bundleType=zip
+          aws deploy create-deployment --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_NAME }} --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --deployment-group-name ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} --s3-location bucket=${{secrets.S3_BUCKET_NAME}},key=$GITHUB_SHA.zip,bundleType=zip
 
