feat: application.yml 변경 및 테스트 api 추가 #25

--- a/backend/dguonoff/src/main/resources/application.yml
+++ b/backend/dguonoff/src/main/resources/application.yml
@@ -20,6 +20,18 @@ spring:
         persistence:
           persistence-unit-name: jpa-test
     generate-ddl: true
+  mail:
+    host: ${MAIL_HOST}
+    port: ${MAIL_PORT}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          timeout: 5000
+          starttls:
+            enable: true
 
 server:
   port: ${APP_SERVER_PORT}
