--- a/frontend/dguonoff/package.json
+++ b/frontend/dguonoff/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.14",
     "@types/react-speech-recognition": "^3.9.3",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
