--- a/frontend/dguonoff/package.json
+++ b/frontend/dguonoff/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.14",
     "@types/react-speech-recognition": "^3.9.3",
     "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/styled-components": "^5.1.29"
   }
 }
