--- a/backend/dguonoff/build.gradle
+++ b/backend/dguonoff/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.18-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id "org.sonarqube" version "4.4.1.3373"
 }
 
 group = 'backend.spectrum'
